made another change to props

--- a/DronesTech/Jenkinsfile
+++ b/DronesTech/Jenkinsfile
@@ -1,5 +1,5 @@
-/* Requires the Docker Pipeline plugin */
 pipeline {
+
     agent { any { image 'maven:3.9.5' } }
     stages {
         stage('build') {
@@ -7,7 +7,7 @@ pipeline {
             
             echo 'maven clean install completed'
             
-                bat 'mvn -f DronesTech/pom.xml clean install'
+                bat 'mvn -f pom.xml clean install'
                 
 
 
@@ -24,5 +24,6 @@ pipeline {
 
             }
         }
-    }
+
+  }
 }
